fer-de-lance/tests/negative/duplicate_params.snek
(defn (isodd n n)
  (if (< n 0)
      (isodd (- 0 n))
      (if (= n 0)
          false
          (iseven (sub1 n) n)
      )
  )
)

(defn (iseven n)
  (if (= n 0)
      true
      (isodd (sub1 n) n)
  )
)

(block
  (print input)
  (print (isodd input 4))
)
